kubernetes/k8s/nextcloud/nextcloud.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  serviceName: nextcloud
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: nextcloud
          image: ghcr.io/akashisn/nextcloud@sha256:623f92e5088b409c17e5d69b8630ceb612e2544402a26be7dc0079128d623580
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: data
              mountPath: /mnt/nextcloud
            - name: static
              mountPath: /mnt/static
            - name: musics
              mountPath: /mnt/musics
            - name: musics-aac
              mountPath: /mnt/musics_aac
            - name: musics-opus
              mountPath: /mnt/musics_opus
            - name: videos
              mountPath: /mnt/videos
            - name: photos
              mountPath: /mnt/photos
            - name: nextcloud-secrets
              mountPath: /secrets
            - name: nextcloud-conf
              mountPath: /usr/local/etc/php-fpm.d/zz-docker.conf
              subPath: zz-docker.conf
              readOnly: true
            - name: nextcloud-conf
              mountPath: /usr/local/etc/php/conf.d/nextcloud.ini
              subPath: nextcloud.ini
              readOnly: true
            - name: nextcloud-hooks
              mountPath: /docker-entrypoint-hooks.d/before-starting/config.sh
              subPath: config.sh
              readOnly: true
          resources:
            requests:
              cpu: 300m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
        - name: nginx
          image: nginx:1.29.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: nginx-nextcloud
            - containerPort: 8080
              name: nginx-static
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: static
              mountPath: /mnt/static
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/nextcloud.conf
              subPath: nextcloud.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/static.conf
              subPath: static.conf
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
            limits:
              cpu: 500m
              memory: 2000Mi
      volumes:
        - name: nextcloud-secrets
          projected:
            sources:
              - secret:
                  name: nextcloud-secrets
              - secret:
                  name: common-secrets
        - name: nextcloud-conf
          configMap:
            name: nextcloud-conf
        - name: nextcloud-hooks
          configMap:
            defaultMode: 504
            name: nextcloud-hooks
        - name: nginx-conf
          configMap:
            name: nginx-conf
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: app
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
    - metadata:
        name: static
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: iscsi-hdd-storage
        resources:
          requests:
            storage: 8Ti
    - metadata:
        name: musics
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: nfs-hdd-storage
        resources:
          requests:
            storage: 500Gi
    - metadata:
        name: musics-aac
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: nfs-hdd-storage
        resources:
          requests:
            storage: 500Gi
    - metadata:
        name: musics-opus
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: nfs-hdd-storage
        resources:
          requests:
            storage: 500Gi
    - metadata:
        name: videos
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: nfs-hdd-storage
        resources:
          requests:
            storage: 2Ti
    - metadata:
        name: photos
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: nfs-hdd-storage
        resources:
          requests:
            storage: 2Ti
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - name: nginx-nextcloud
      port: 80
      targetPort: nginx-nextcloud
    - name: nginx-static
      port: 8080
      targetPort: nginx-static
  selector:
    app: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextcloud
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.akashisn.info
        - static.akashisn.info
      secretName: nextcloud-cert
  rules:
    - host: files.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: nginx-nextcloud
    - host: static.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: nginx-static
